Add mail account migadu

--- a/.msmtprc
+++ b/.msmtprc
@@ -11,8 +11,8 @@ user david.a.porter@gmail.com
 from david.a.porter@gmail.com
 passwordeval /usr/bin/security find-internet-password -s imap.gmail.com -a david.a.porter -w
 
-account data61
-host smtp-auth.csiro.au
-user por085@csiro.au
-from david.porter@data61.csiro.au
-passwordeval /usr/bin/security find-internet-password -s smtp-auth.csiro.au -a por085@csiro.au -w
+account migadu
+host smtp.migadu.com
+user david@daporter.net
+from david@daporter.net
+password XmpM;4TBZs3CNc[
