Simplify tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,106 +1,10 @@
-start-server
-
-# Move the prefix from C-b to C-z.
-set -g prefix C-z
-
-# Free the original C-b prefix.
-unbind-key C-b
-
-# Ensure that we can send Ctrl-z to other apps.
-bind C-z send-prefix
-
-# tmux adds a very small delay when sending commands, and this delay can
-# interfere with other programs such as the Vim text editor. We can set this
-# delay so it’s much more responsive:
-set -s escape-time 1
+set -g default-terminal "tmux-256color"
 
 # Start the index of windows and panes at 1 instead of 0.
 set  -g base-index      1
 setw -g pane-base-index 1
 
-setw -g mode-keys emacs
+set-option -g status-bg white
+set-option -g status-fg black
 
-# Reload the file.
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Splitting windows.
-bind | split-window -h
-bind - split-window -v
-
-# Resizing panes.
-#
-# if we use the -r flag, we can specify that we want the key to be repeatable,
-# meaning we can press the prefix key only once and then continuously press the
-# defined key within the repeat limit.  The default repeat limit is 500ms.
-bind -r B resize-pane -L 5
-bind -r N resize-pane -D 5
-bind -r P resize-pane -U 5
-bind -r F resize-pane -R 5
-
-set -g set-titles on
-set -g set-titles-string '#S'
-
-# Using the mouse is a bad habit.
-setw -g mode-mouse off
-
-# Set the default terminal mode to 256color mode.
-set -g default-terminal "screen-256color"
-
-### Colours. (From https://github.com/seebi/tmux-colors-solarized)
-
-# default statusbar colors
-set-option -g status-bg black
-set-option -g status-fg yellow
-set-option -g status-attr dim
-
-# default window title colors
-set-window-option -g window-status-fg blue
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
-
-set-window-option -g window-status-activity-fg green
-set-window-option -g window-status-activity-bg default
-
-# pane border
-# set-option -g pane-border-fg colour235 #base02
-# set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg default
-set-option -g message-fg green
-
-# pane number display
-set-option -g display-panes-active-colour blue
-set-option -g display-panes-colour red
-
-# clock
-set-window-option -g clock-mode-colour green
-
-# Status line left side.
-set -g status-left-length 40
-set -g status-left "Session: #S #I #P"
-
-set -g status-utf8 on
-
-# Status line right side.
-# 15% | 28 Nov 18:15
-set -g status-right "%d %b %R"
-
-# Update the status bar every sixty seconds.
-set -g status-interval 60
-
-
-# Workaround to make OS X copy-paste work
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-
-# Enable activity alerts.
-setw -g monitor-activity on
-set -g visual-activity on
-
-# Center the window list.
-set -g status-justify centre
+set-option -g window-status-current-style bold
