Vim: use a git submodule for the tempus themes
Initially, I installed the tempus themes locally in ~/.vim/colors.  But
Having discovered there is a dedicated repository for the themes, I can
replace those theme files with a git submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/.vim/pack/dporter/start/vim-repeat"]
 	path = vim/.vim/pack/dporter/start/vim-repeat
 	url = https://github.com/tpope/vim-repeat.git
+[submodule "vim/.vim/pack/dporter/start/tempus-themes-vim"]
+	path = vim/.vim/pack/dporter/start/tempus-themes-vim
+	url = git@gitlab.com:protesilaos/tempus-themes-vim.git
