--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -161,13 +161,24 @@ bind -n C-Space copy-mode
 # copy mode
 # Vim copy-paste behaviour using the clipboard
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -selection clipboard -i"
+bind -T copy-mode-vi y send-keys -X copy-pipe-no-clear "xclip -in -selection clipboard"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
-# For vi copy mode bindings
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "xclip -selection clipboard -i"
-# For emacs copy mode bindings
-bind -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe "xclip -selection clipboard -i"
+# Selecting a region with the mouse copies it to the primary selection.
+bind -T copy-mode-vi MouseDragEnd1Pane \
+	send-keys -X copy-pipe "xclip -in -selection primary"
+bind -T copy-mode MouseDragEnd1Pane \
+	send-keys -X copy-pipe "xclip -in -selection primary"
+
+# Double-clicking a word copies it to the primary selection.
+bind-key -T copy-mode-vi DoubleClick1Pane \
+    send-keys -X select-word \; \
+    send-keys -X copy-pipe "xclip -in -selection primary"
+
+# Triple-clicking a line copies it to the primary selection.
+bind-key -T copy-mode-vi TripleClick1Pane \
+    send-keys -X select-line \; \
+    send-keys -X copy-pipe "xclip -in -selection primary"
 
 # User Interface
 # --------------
@@ -205,12 +216,24 @@ set -g visual-bell on # show message, make no sound
 set -g window-style "bg=default,fg=default"
 set -g window-active-style "bg=default,fg=default"
 
+# Pane styles.  Setting the bg to "default" allows for transparency, if
+# the underlying terminal emulator is configured accordingly.
+set -g pane-border-style "bg=$tempus_bg_dim,fg=$tempus_bg_alt"
+set -g pane-active-border-style "bg=$tempus_bg_alt,fg=$tempus_fg_alt"
+
+# Copy mode styles.  This governs such things as the visual selection
+# block and the search results in the scroll buffer.  I choose to avoid
+# setting to plain "reverse" because it is visually identical to Vim's
+# selection, which can be confusing sometimes.
+set -g mode-style "bg=$tempus_bg_alt,fg=colour6,bold,underscore"
+
 # Status line styles.  Used when displaying status messages and when
 # using the command prompt.
 set -g message-style "bg=default,fg=default,bold"
 
 # Clock mode options (I seldom use this, but okay).
 set -g clock-mode-style 24 # time format
+set -g clock-mode-colour "$tempus_fg_alt"
 
 # Status bar
 # ----------
