--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -213,15 +213,13 @@ set -g visual-bell on # show message, make no sound
 
 # Default window colours are inherited from the underlying terminal.
 # This also allows for a transparent background.
-# set -g window-style "bg=default,fg=default"
-# set -g window-active-style "bg=default,fg=default"
 set -g window-style "bg=default,fg=default"
-set -g window-active-style "bg=$tempus_bg_dim,fg=default"
+set -g window-active-style "bg=default,fg=default"
 
 # Pane styles.  Setting the bg to "default" allows for transparency, if
 # the underlying terminal emulator is configured accordingly.
-set -g pane-border-style "bg=default,fg=default"
-set -g pane-active-border-style "bg=default,fg=default"
+set -g pane-border-style "bg=$tempus_bg_dim,fg=$tempus_bg_alt"
+set -g pane-active-border-style "bg=$tempus_bg_alt,fg=$tempus_fg_alt"
 
 # Copy mode styles.  This governs such things as the visual selection
 # block and the search results in the scroll buffer.  I choose to avoid
