--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -20,6 +20,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
+			<family>Fira Sans</family>
 			<family>Noto Sans</family>
 			<family>Liberation Sans</family>
 		</prefer>
