--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -161,7 +161,7 @@ bind -n C-Space copy-mode
 # copy mode
 # Vim copy-paste behaviour using the clipboard
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-no-clear "xclip -in -selection clipboard"
+bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection clipboard"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # Selecting a region with the mouse copies it to the primary selection.
