--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -218,8 +218,8 @@ set -g window-active-style "bg=default,fg=default"
 
 # Pane styles.  Setting the bg to "default" allows for transparency, if
 # the underlying terminal emulator is configured accordingly.
-set -g pane-border-style "bg=$tempus_bg_dim,fg=$tempus_bg_alt"
-set -g pane-active-border-style "bg=$tempus_bg_alt,fg=$tempus_fg_alt"
+set -g pane-border-style "bg=default,fg=default"
+set -g pane-active-border-style "bg=default,fg=default"
 
 # Copy mode styles.  This governs such things as the visual selection
 # block and the search results in the scroll buffer.  I choose to avoid
@@ -244,7 +244,7 @@ set -g status-interval 120
 
 # Status bar general options about placement and overall style.
 set -g status on
-set -g status-style "fg=$tempus_fg,bg=$tempus_bg_dim"
+set -g status-style "fg=$tempus_fg,bg=$tempus_bg_alt"
 set -g status-position top
 set -g status-justify left # this concerns the window list
 
@@ -270,4 +270,4 @@ set -g window-status-last-style ""
 
 # Status left and right
 set -g status-left "#[bold]#{?pane_synchronized,#[fg=colour5] sync on ,}#{?pane_in_mode,#[fg=colour4] #{pane_mode}#{?selection_present, selecting,}#{?rectangle_toggle, rectangle,} ,}"
-set -g status-right "#[bg=default,fg=default]#{?client_prefix,#[fg=colour2]#[bg=default]#[reverse],} #S #{session_id} #{?client_prefix,,}"
+set -g status-right "#[bg=default,fg=$tempus_fg_alt]#{?client_prefix,#[fg=colour2]#[bg=default]#[reverse],} #S #{session_id} #{?client_prefix,,}"
