Don't edit tracked files when switching themes
This change adds a level of indirection: it introduces non-tracked files
that are updated when the active theme is changed.  These files are
then read by the various (tracked) config files to actually perform the
update.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *~
 /bin/bin/pash
 /bin/bin/shfmt
+/bspwm/.config/bspwm/bspwm_colours
 /colours/.wallpaper.jpg
 /emacs/.emacs.d/auto-save-list
 /emacs/.emacs.d/elfeed
@@ -11,5 +12,7 @@
 /emacs/.emacs.d/transient
 /emacs/.emacs.d/url
 /newsboat/.config/newsboat/urls
+/tmux/.tmux_colours.conf
 /vim/.vim/.netrwhist
+/vim/.vim/current_scheme
 /vim/.vim/spell
