--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,11 +18,7 @@
 # For the rationale of this design, see the description under the
 # heading "0.20.0.20181031" inside the CHANGELOG.md of the Tempus Themes
 # Generator: https://gitlab.com/protesilaos/tempus-themes-generator
-tempus_fg="#464340"
-tempus_bg="#f8f2e5"
-tempus_fg_alt="#68607d"
-tempus_bg_alt="#eae9dd"
-tempus_bg_dim="#f1ede1"
+source-file ~/.tmux_colours.conf
 
 # NOTE on colour naming conventions.  Any other colour I define herein
 # follows the numbering of the 16 first escape sequences.  In short
