fontconfig: prefer serif font New Century Schoolbook

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -10,6 +10,7 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
+			<family>New Century Schoolbook</family>
 			<family>Noto Serif</family>
 			<family>Liberation Serif</family>
 		</prefer>
@@ -30,6 +31,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
+			<family>Iosevka Curly</family>
 			<family>Hack</family>
 			<family>Iosevka Term</family>
 		</prefer>
