Ignore some uninteresting Emacs state files

--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,20 @@
 /bin/bin/shfmt
 /bspwm/.config/bspwm/bspwm_colours
 /colours/.wallpaper.jpg
+/emacs/.emacs.d/.org-id-locations
 /emacs/.emacs.d/auto-save-list
 /emacs/.emacs.d/bookmarks
 /emacs/.emacs.d/diary
 /emacs/.emacs.d/elfeed
 /emacs/.emacs.d/elpa
+/emacs/.emacs.d/eshell
 /emacs/.emacs.d/feeds.el.gpg
 /emacs/.emacs.d/network-security.data
+/emacs/.emacs.d/nov-places
 /emacs/.emacs.d/org-journal.cache
 /emacs/.emacs.d/recentf
 /emacs/.emacs.d/savehist
+/emacs/.emacs.d/saveplace
 /emacs/.emacs.d/tramp
 /emacs/.emacs.d/transient
 /emacs/.emacs.d/url
