--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -21,6 +21,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
+			<family>FiraGo</family>
 			<family>Noto Sans</family>
 			<family>Liberation Sans</family>
 		</prefer>
