--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -10,7 +10,7 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>New Century Schoolbook</family>
+			<family>Georgia</family>
 			<family>Noto Serif</family>
 			<family>Liberation Serif</family>
 		</prefer>
@@ -21,8 +21,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>FiraGo</family>
-			<family>Noto Sans</family>
+			<family>Noto Sans SemiCondensed</family>
 			<family>Liberation Sans</family>
 		</prefer>
 		<default>
