--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,14 @@
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
 /emacs/.emacs.d/org-journal.cache
+/emacs/.emacs.d/package-quickstart.el
+/emacs/.emacs.d/projects
+/emacs/.emacs.d/prot-lisp
 /emacs/.emacs.d/recentf
+/emacs/.emacs.d/request
 /emacs/.emacs.d/savehist
 /emacs/.emacs.d/saveplace
+/emacs/.emacs.d/session.*
 /emacs/.emacs.d/tramp
 /emacs/.emacs.d/transient
 /emacs/.emacs.d/url
