--- a/isync/.mbsyncrc
+++ b/isync/.mbsyncrc
@@ -6,7 +6,7 @@ SyncState *
 IMAPAccount migadu
 Host imap.migadu.com
 User david@daporter.net
-PassCmd "pash show mail/migadu" 
+PassCmd "gpg -q --for-your-eyes-only -d ~/.authinfo.gpg | awk -F ' ' '/imap.migadu.com/ { print $NF; exit; }'"
 SSLType IMAPS
 AuthMechs LOGIN
 
