Emacs: store .newsrc in ~/.emacs.d

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /bspwm/.config/bspwm/bspwm_colours
 /colours/.wallpaper.jpg
 /emacs/.emacs.d/.emacs.desktop.lock
+/emacs/.emacs.d/.newsrc-dribble
+/emacs/.emacs.d/.newsrc.eld
 /emacs/.emacs.d/.org-id-locations
 /emacs/.emacs.d/auto-save-list
 /emacs/.emacs.d/bookmarks
