--- a/isync/.mbsyncrc
+++ b/isync/.mbsyncrc
@@ -6,7 +6,7 @@ SyncState *
 IMAPAccount migadu
 Host imap.migadu.com
 User david@daporter.net
-PassCmd "pass imap.migadu.com/david@daporter.net"
+PassCmd "pass migadu.com/david@daporter.net"
 SSLType IMAPS
 AuthMechs LOGIN
 
