Emacs: update to Prot's latest changes

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /emacs/.emacs.d/bookmarks
 /emacs/.emacs.d/desktop
 /emacs/.emacs.d/diary
+/emacs/.emacs.d/ebdb.gpg
 /emacs/.emacs.d/elfeed
 /emacs/.emacs.d/elpa
 /emacs/.emacs.d/eshell
