Simplify isync config

--- a/isync/.mbsyncrc
+++ b/isync/.mbsyncrc
@@ -1,63 +1,21 @@
-# Global defaults
-Create Both
-Expunge Both
-SyncState *
-
 IMAPAccount migadu
 Host imap.migadu.com
 User david@daporter.net
 PassCmd "pass migadu.com/david@daporter.net"
 SSLType IMAPS
-AuthMechs LOGIN
 
-IMAPStore migadu-remote
+IMAPStore migadu
 Account migadu
 
-MaildirStore migadu-local
-Path ~/mail/migadu/
-Inbox ~/mail/migadu/inbox
+MaildirStore local
+Path ~/Mail/
+Inbox ~/Mail/inbox
 SubFolders Verbatim
 
-Channel migadu-inbox
-Master :migadu-remote:INBOX
-Slave :migadu-local:inbox
-
-Channel migadu-sent
-Master :migadu-remote:Sent
-Slave :migadu-local:sent
-
-Channel migadu-drafts
-Master :migadu-remote:Drafts
-Slave :migadu-local:drafts
-
-Channel migadu-spam
-Master :migadu-remote:Junk
-Slave :migadu-local:spam
-
-Channel migadu-trash
-Master :migadu-remote:Trash
-Slave :migadu-local:trash
-
-Channel migadu-archive
-Master :migadu-remote:Archive
-Slave :migadu-local:archive
-
-Channel migadu-catchall
-Master :migadu-remote:
-Slave  :migadu-local:
-Pattern *
-Patterns !INBOX   !inbox
-Patterns !Sent    !sent
-Patterns !Drafts  !drafts
-Patterns !Junk    !spam
-Patterns !Trash   !trash
-Patterns !Archive !archive
-
-Group migadu
-Channel migadu-inbox
-Channel migadu-sent
-Channel migadu-drafts
-Channel migadu-spam
-Channel migadu-trash
-Channel migadu-archive
-Channel migadu-catchall
+Channel primary
+Master :migadu:
+Slave :local:
+Patterns *
+Create Both
+#Expunge Both
+SyncState *
