Emacs: ignore eww bookmarks file

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /emacs/.emacs.d/elfeed
 /emacs/.emacs.d/elpa
 /emacs/.emacs.d/eshell
+/emacs/.emacs.d/eww-bookmarks
 /emacs/.emacs.d/feeds.el.gpg
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
