--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
 /emacs/.emacs.d/org-journal.cache
-/emacs/.emacs.d/package-quickstart.el
+/emacs/.emacs.d/package-quickstart.el*
 /emacs/.emacs.d/projects
 /emacs/.emacs.d/prot-lisp
 /emacs/.emacs.d/recentf
