fontconfig: fix preferred order for latin

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -1,26 +1,27 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-	<!-- <its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0"> -->
-	<!-- 	<its:translateRule translate="no" selector="/fontconfig/*[not(self::description)]"/> -->
-	<!-- </its:rules> -->
- 
-	<!-- <description>Set preferable fonts for Latin</description> -->
+	<its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0">
+		<its:translateRule translate="no" selector="/fontconfig/*[not(self::description)]"/>
+	</its:rules>
+
+	<description>Set preferable fonts for Latin</description>
 
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>DejaVu Serif</family>
-			<family>Georgia</family>
+			<family>Noto Serif</family>
 			<family>Liberation Serif</family>
 		</prefer>
 		<default>
-			<family>Noto Serif</family>
+			<family>DejaVu Serif</family>
 		</default>
 	</alias>
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
+			<family>FiraGO</family>
+			<family>Roboto</family>
 			<family>Noto Sans SemiCondensed</family>
 			<family>Liberation Sans</family>
 		</prefer>
@@ -32,7 +33,6 @@
 		<family>monospace</family>
 		<prefer>
 			<family>Hack</family>
-			<family>Iosevka Curly</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Mono</family>
