--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -10,7 +10,7 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Noto Serif</family>
+			<family>Noto Serif SemiCondensed</family>
 			<family>Liberation Serif</family>
 		</prefer>
 		<default>
