fontconfig: prefer Noto Serif, Noto Sans, Fira Code

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -10,7 +10,7 @@
   <alias>
 	<family>serif</family>
 	<prefer>
-	  <family>Noto Serif SemiCondensed</family>
+	  <family>Noto Serif</family>
 	  <family>Liberation Serif</family>
 	</prefer>
 	<default>
@@ -20,9 +20,9 @@
   <alias>
 	<family>sans-serif</family>
 	<prefer>
-	  <family>FiraGO</family>
+	  <family>Noto Sans</family>
 	  <family>Roboto</family>
-	  <family>Noto Sans SemiCondensed</family>
+	  <family>FiraGO</family>
 	  <family>Liberation Sans</family>
 	</prefer>
 	<default>
@@ -32,8 +32,9 @@
   <alias>
 	<family>monospace</family>
 	<prefer>
-      <family>Iosevka Comfy</family>
+	  <family>Fira Code</family>
 	  <family>Hack</family>
+      <family>Iosevka Comfy</family>
 	</prefer>
 	<default>
 	  <family>DejaVu Sans Mono</family>
