--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -32,8 +32,9 @@
   <alias>
 	<family>monospace</family>
 	<prefer>
-	  <family>Fira Code</family>
+	  <family>IBM Plex Mono</family>
 	  <family>Hack</family>
+	  <family>Fira Code</family>
       <family>Iosevka Comfy</family>
 	</prefer>
 	<default>
