emacs: don’t encrypt elfeed feeds file
Encryption doesn’t seem necessary.

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 /emacs/.emacs.d/elpa
 /emacs/.emacs.d/eshell
 /emacs/.emacs.d/eww-bookmarks
-/emacs/.emacs.d/feeds.el.gpg
+/emacs/.emacs.d/feeds.el
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
 /emacs/.emacs.d/org-journal.cache
