emacs: replace Zetteldeft with Org-Roam

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
 /emacs/.emacs.d/org-journal.cache
+/emacs/.emacs.d/org-roam.db
 /emacs/.emacs.d/package-quickstart.el
 /emacs/.emacs.d/projects
 /emacs/.emacs.d/prot-eww-visited-history
