--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /emacs/.emacs.d/eshell
 /emacs/.emacs.d/eww-bookmarks
 /emacs/.emacs.d/feeds.el
+/emacs/.emacs.d/lisp/mct
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
 /emacs/.emacs.d/org-journal.cache
