--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -1,45 +1,49 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0">
-	<its:translateRule translate="no" selector="/fontconfig/*[not(self::description)]"/>
-  </its:rules>
+	<its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0">
+		<its:translateRule translate="no"
+		                   selector="/fontconfig/*[not(self::description)]"/>
+	</its:rules>
 
-  <description>Set preferable fonts for Latin</description>
+	<description>Set preferable fonts for Latin</description>
 
-  <alias>
-	<family>serif</family>
-	<prefer>
-	  <family>Noto Serif</family>
-	  <family>Liberation Serif</family>
-	</prefer>
-	<default>
-	  <family>DejaVu Serif</family>
-	</default>
-  </alias>
-  <alias>
-	<family>sans-serif</family>
-	<prefer>
-	  <family>Noto Sans</family>
-	  <family>Roboto</family>
-	  <family>FiraGO</family>
-	  <family>Liberation Sans</family>
-	</prefer>
-	<default>
-	  <family>DejaVu Sans Condensed</family>
-	</default>
-  </alias>
-  <alias>
-	<family>monospace</family>
-	<prefer>
-	  <family>Hack</family>
-	  <family>Fira Code</family>
-	  <family>IBM Plex Mono</family>
-      <family>Iosevka Comfy</family>
-	</prefer>
-	<default>
-	  <family>DejaVu Sans Mono</family>
-	</default>
-  </alias>
+	<alias>
+		<family>serif</family>
+		<prefer>
+			<family>ETBembo</family>
+			<family>Libre Baskerville</family>
+			<family>Noto Serif</family>
+			<family>Liberation Serif</family>
+		</prefer>
+		<default>
+			<family>DejaVu Serif</family>
+		</default>
+	</alias>
 
+	<alias>
+		<family>sans-serif</family>
+		<prefer>
+			<family>Noto Sans</family>
+			<family>Roboto</family>
+			<family>FiraGO</family>
+		</prefer>
+		<default>
+			<family>DejaVu Sans Condensed</family>
+		</default>
+	</alias>
+
+	<alias>
+		<family>monospace</family>
+		<prefer>
+			<family>Fira Code</family>
+			<family>IBM Plex Mono</family>
+			<family>Hack</family>
+			<family>Go Mono</family>
+			<family>Iosevka Comfy</family>
+		</prefer>
+		<default>
+			<family>DejaVu Sans Mono</family>
+		</default>
+	</alias>
 </fontconfig>
