fontconfig: switch to Libre Caslon Text, Open Sans
The default serif font is now Libre Caslon Text; the default sans-serif
is now Open Sans.  I’ve switched to these because their sizing is easier
to control.

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,6 +11,7 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
+			<family>Libre Caslon Text</family>
 			<family>ETBembo</family>
 			<family>Libre Baskerville</family>
 			<family>Noto Serif</family>
@@ -24,9 +25,10 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Noto Sans</family>
+			<family>Open Sans</family>
 			<family>Roboto</family>
-			<family>FiraGO</family>
+			<family>Lato</family>
+			<family>Noto Sans</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Condensed</family>
