--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -13,9 +13,9 @@
 		<prefer>
 			<family>Libre Caslon Text</family>
 			<family>ETBembo</family>
-			<family>Libre Baskerville</family>
 			<family>Noto Serif</family>
-			<family>Liberation Serif</family>
+			<family>Libre Baskerville</family>
+			<family>Source Serif Pro</family>
 		</prefer>
 		<default>
 			<family>DejaVu Serif</family>
@@ -25,10 +25,9 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Open Sans</family>
-			<family>Roboto</family>
-			<family>Lato</family>
-			<family>Noto Sans</family>
+			<family>Fira Sans</family>
+			<family>PT Sans</family>
+			<family>Source Sans Pro</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Condensed</family>
