rename package x11 to xorg

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,7 +14,7 @@
 	path = vim/.vim/pack/dporter/start/tempus-themes-vim
 	url = git@gitlab.com:protesilaos/tempus-themes-vim.git
 [submodule "x11/.local/share/my_colours/tempus-themes-xterm"]
-	path = x11/.local/share/my_colours/tempus-themes-xterm
+	path = xorg/.local/share/my_colours/tempus-themes-xterm
 	url = https://gitlab.com/protesilaos/tempus-themes-xterm
 [submodule "vim/.vim/pack/dporter/start/vim-qf"]
 	path = vim/.vim/pack/dporter/start/vim-qf
