Return to a bspwm-based X.org enviroment

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -12,6 +12,8 @@
 		<family>serif</family>
 		<prefer>
 			<family>Libre Caslon Text</family>
+			<family>Noto Color Emoji</family>
+			<family>Noto Emoji</family>
 			<family>ETBembo</family>
 			<family>Noto Serif</family>
 			<family>Libre Baskerville</family>
@@ -26,6 +28,8 @@
 		<family>sans-serif</family>
 		<prefer>
 			<family>Fira Sans</family>
+			<family>Noto Color Emoji</family>
+			<family>Noto Emoji</family>
 			<family>PT Sans</family>
 			<family>Source Sans Pro</family>
 		</prefer>
@@ -38,6 +42,8 @@
 		<family>monospace</family>
 		<prefer>
 			<family>Fira Code</family>
+			<family>Noto Color Emoji</family>
+			<family>Noto Emoji</family>
 			<family>IBM Plex Mono</family>
 			<family>Hack</family>
 			<family>Go Mono</family>
