--- a/shell/.inputrc
+++ b/shell/.inputrc
@@ -3,6 +3,8 @@
 #
 # You can re-read the inputrc file with C-x C-r.
 
+$include /etc/inputrc
+
 set bell-style visible
 set blink-matching-paren on
 set colored-completion-prefix on
