--- a/notmuch/.notmuch-config
+++ b/notmuch/.notmuch-config
@@ -10,6 +10,7 @@
 # Notmuch will store its database within a sub-directory of the path
 # configured here named ".notmuch".
 #
+
 [database]
 path=/home/david/Mail
 
@@ -28,6 +29,7 @@ path=/home/david/Mail
 # recipient list of replies, and will set the From address based on the
 # address to which the original email was addressed.
 #
+
 [user]
 name=David Porter
 primary_email=david@daporter.net
@@ -47,8 +49,9 @@ other_email=david.a.porter@gmail.com;
 #		names will be ignored, independent of its depth/location
 #		in the mail store.
 #
+
 [new]
-tags=new
+tags=new;
 ignore=
 
 # Search configuration
@@ -60,6 +63,7 @@ ignore=
 #		search results by default.  Using an excluded tag in a
 #		query will override that exclusion.
 #
+
 [search]
 exclude_tags=deleted;spam;
 
@@ -84,5 +88,6 @@ exclude_tags=deleted;spam;
 #	and update tags, while the "notmuch tag" and "notmuch restore"
 #	commands will notice tag changes and update flags in filenames
 #
+
 [maildir]
 synchronize_flags=true
