emacs: use stand-alone version of lin.el

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /emacs/.emacs.d/eww-bookmarks
 /emacs/.emacs.d/feeds.el
 /emacs/.emacs.d/lisp/kbd-mode
+/emacs/.emacs.d/lisp/lin
 /emacs/.emacs.d/lisp/mct
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
