--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,11 @@
 /emacs/.emacs.d/eshell
 /emacs/.emacs.d/eww-bookmarks
 /emacs/.emacs.d/feeds.el
+/emacs/.emacs.d/fontaine-latest-state.eld
 /emacs/.emacs.d/lisp/kbd-mode
 /emacs/.emacs.d/lisp/lin
 /emacs/.emacs.d/lisp/mct
+/emacs/.emacs.d/multisession/
 /emacs/.emacs.d/network-security.data
 /emacs/.emacs.d/nov-places
 /emacs/.emacs.d/org-journal.cache
