--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,13 +11,11 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
+			<family>Charter</family>
 			<family>Libre Caslon Text</family>
+			<family>Source Serif 4</family>
 			<family>Noto Color Emoji</family>
 			<family>Noto Emoji</family>
-			<family>ETBembo</family>
-			<family>Noto Serif</family>
-			<family>Libre Baskerville</family>
-			<family>Source Serif Pro</family>
 		</prefer>
 		<default>
 			<family>DejaVu Serif</family>
@@ -28,10 +26,9 @@
 		<family>sans-serif</family>
 		<prefer>
 			<family>Fira Sans</family>
+			<family>Cooper Hewitt</family>
 			<family>Noto Color Emoji</family>
 			<family>Noto Emoji</family>
-			<family>PT Sans</family>
-			<family>Source Sans Pro</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Condensed</family>
@@ -41,13 +38,11 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Fira Code</family>
+			<family>Fira Mono</family>
+			<family>Source Code Pro</family>
+			<family>IBM Plex Mono</family>
 			<family>Noto Color Emoji</family>
 			<family>Noto Emoji</family>
-			<family>IBM Plex Mono</family>
-			<family>Hack</family>
-			<family>Go Mono</family>
-			<family>Iosevka Comfy</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Mono</family>
