--- a/fontconfig/.config/fontconfig/conf.d/80-condensed-large-dejavu.conf
+++ b/fontconfig/.config/fontconfig/conf.d/80-condensed-large-dejavu.conf
@@ -1,11 +1,14 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-	<!-- <its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0"> -->
-	<!-- 	<its:translateRule translate="no" selector="/fontconfig/*[not(self::description)]"/> -->
-	<!-- </its:rules> -->
- 
-	<!-- <description>Force DejaVu to use Condensed letter forms instead of the Regular (wider) ones for larger font sizes</description> -->
+	<its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0">
+		<its:translateRule translate="no" selector="/fontconfig/*[not(self::description)]"/>
+	</its:rules>
+	
+	<description>
+		Force DejaVu to use Condensed letter forms instead of the Regular
+		(wider) ones for larger font sizes
+	</description>
 
 	<match target="pattern">
 		<test name="family" qual="any">
