Use Input Mono for monospace font

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -38,9 +38,10 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Fira Mono</family>
+			<family>Input Mono Narrow</family>
 			<family>Source Code Pro</family>
 			<family>IBM Plex Mono</family>
+			<family>Fira Mono</family>
 			<family>Noto Color Emoji</family>
 			<family>Noto Emoji</family>
 		</prefer>
