--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -12,10 +12,7 @@
 		<family>serif</family>
 		<prefer>
 			<family>Charter</family>
-			<family>Libre Caslon Text</family>
 			<family>Source Serif 4</family>
-			<family>Noto Color Emoji</family>
-			<family>Noto Emoji</family>
 		</prefer>
 		<default>
 			<family>DejaVu Serif</family>
@@ -27,8 +24,7 @@
 		<prefer>
 			<family>Fira Sans</family>
 			<family>Cooper Hewitt</family>
-			<family>Noto Color Emoji</family>
-			<family>Noto Emoji</family>
+			<family>Roboto</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Condensed</family>
@@ -38,12 +34,10 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Input Mono Narrow</family>
+			<family>Input Mono Condensed</family>
 			<family>Source Code Pro</family>
 			<family>IBM Plex Mono</family>
 			<family>Fira Mono</family>
-			<family>Noto Color Emoji</family>
-			<family>Noto Emoji</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Mono</family>
