--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,8 +11,9 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Charter</family>
 			<family>Source Serif 4</family>
+			<family>IBM Plex Serif Text</family>
+			<family>Charter</family>
 		</prefer>
 		<default>
 			<family>DejaVu Serif</family>
@@ -24,6 +25,8 @@
 		<prefer>
 			<family>Fira Sans</family>
 			<family>Cooper Hewitt</family>
+			<family>Source Sans 3</family>
+			<family>IBM Plex Sans</family>
 			<family>Roboto</family>
 		</prefer>
 		<default>
