--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,6 +11,7 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
+			<family>EB Garamond</family>
 			<family>Source Serif 4</family>
 			<family>IBM Plex Serif Text</family>
 			<family>Charter</family>
@@ -23,10 +24,9 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Fira Sans</family>
-			<family>Cooper Hewitt</family>
 			<family>Source Sans 3</family>
 			<family>IBM Plex Sans</family>
+			<family>Fira Sans</family>
 			<family>Roboto</family>
 		</prefer>
 		<default>
