polybar: tweak date display

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -149,7 +149,7 @@ scroll-down = ~/bin/polybar_pipewire decrease
 
 [module/date]
 type = custom/script
-exec = date '+%a, %-d %b ∙ %R'
+exec = date '+%a %-d %b ∙ %R'
 interval = 60
 
 [module/coretemp]
