--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,10 +11,11 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>EB Garamond</family>
+			<family>Libertinus Serif</family>
 			<family>Source Serif 4</family>
-			<family>IBM Plex Serif Text</family>
+			<family>Georgia</family>
 			<family>Charter</family>
+			<family>EB Garamond</family>
 		</prefer>
 		<default>
 			<family>DejaVu Serif</family>
@@ -24,6 +25,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
+			<family>FiraGO</family>
 			<family>Source Sans 3</family>
 			<family>IBM Plex Sans</family>
 			<family>Fira Sans</family>
@@ -37,10 +39,12 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
+			<family>Iosevka Comfy Wide Fixed</family>
+			<family>Fira Mono</family>
+			<family>Go Mono</family>
+			<family>IBM Plex Mono</family>
 			<family>Input Mono Condensed</family>
 			<family>Source Code Pro</family>
-			<family>IBM Plex Mono</family>
-			<family>Fira Mono</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Mono</family>
